--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>Hello Angular World</h1>
+<div class="container">
+	<h1>Angular Components</h1>
+	<app-post-form></app-post-form>
+
+	<hr>
+
+	<app-post></app-post>
+</div>
