--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,10 @@
 
 	<hr>
 
-	<app-post *ngFor="let p of posts" [post]="p"></app-post>
+	<app-post *ngFor="let p of posts" [post]="p">
+		<small *ngIf="p.text.length > 10; else short ">Big post</small>
+		<ng-template #short>
+			<small>Short post</small>
+		</ng-template>
+	</app-post>
 </div>
