--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
 	<hr>
 
 	<app-post *ngFor="let p of posts" [post]="p">
-		<small *ngIf="p.text.length > 10; else short ">Big post</small>
-		<ng-template #short>
-			<small>Short post</small>
-		</ng-template>
+		<div #info>
+			<small *ngIf="p.text.length > 10; else short ">Big post</small>
+			<ng-template #short>
+				<small>Short post</small>
+			</ng-template>
+		</div>
 	</app-post>
 </div>
