--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 	<hr>
 
-	<app-post *ngFor="let p of posts" [post]="p">
+	<app-post *ngFor="let p of posts" [post]="p" (onRemove)="removePost($event)">
 		<div #info>
 			<small *ngIf="p.text.length > 10; else short ">Big post</small>
 			<ng-template #short>
