pass parameters to directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
 	<h1>Angular Components</h1>
-	<p appStyle>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aperiam.</p>
+	<p appStyle="red" fontWeight="bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aperiam.</p>
 </div>
