--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
 	<h1>Angular Pipes</h1>
-	<p>{{str | uppercase | lowercase | titlecase}}</p>
-	<p>{{str | titlecase | slice:1:-2}}</p>
+	<p>{{date | date:'fullDate'}}</p>
 </div>
