--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
 	<h1>Angular Pipes</h1>
-	<p>{{float}}</p>
-	<p>{{float | currency}}</p>
-	<p>{{float | percent:'2.0-0'}}</p>
-	<pre>{{obj | json}}</pre>
+	<p>{{10 | mult:1}}</p>
+	<p>{{10 | mult:3}}</p>
+	<p>{{10 | mult:5}}</p>
 </div>
