--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
 	<h1>Angular Pipes</h1>
-	<p>{{10 | mult:1}}</p>
-	<p>{{10 | mult:3}}</p>
-	<p>{{10 | mult:5}}</p>
-
-	<p>{{'Hello World         '}}</p>
+	<button class="btn" (click)="searchField='title'">Title</button>
+	<button class="btn" (click)="searchField='text'">Text</button>
+	<input type="text" [(ngModel)]="search">
+	<div *ngFor="let post of posts | filter:search:searchField" class="card">
+		<h2>{{post.title}}</h2>
+		<p>{{post.text}}</p>
+	</div>
 </div>
