--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <div class="container">
 	<h1>Angular Pipes</h1>
-	<button class="btn" (click)="searchField='title'">Title</button>
-	<button class="btn" (click)="searchField='text'">Text</button>
-	<hr>
-	<button class="btn" (click)="addPost()">Add new post</button>
-	<input type="text" [(ngModel)]="search">
-	<div *ngFor="let post of posts | filter:search:searchField" class="card">
-		<h2>{{post.title}}</h2>
-		<p>{{post.text}}</p>
-	</div>
+	<p>Wait for it...{{p | async}}</p>
+	<p>Date:{{date | async | date}}</p>
 </div>
