--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-	<h1>Angular Pipes</h1>
-	<p>Wait for it...{{p | async}}</p>
-	<p>Date:{{date | async | date}}</p>
+	<h1>Angular Services</h1>
 </div>
