--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div class="container">
 	<h1>Angular Services</h1>
+	<div class="card">
+		<h2>App counter: {{appCounterServise.counter}}</h2>
+		<button class="btn" (click)="appCounterServise.increase()">+</button>
+		<button class="btn" (click)="appCounterServise.decrease()">-</button>
+	</div>
 </div>
