--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,10 @@
 		<button class="btn" (click)="appCounterServise.increase()">+</button>
 		<button class="btn" (click)="appCounterServise.decrease()">-</button>
 	</div>
+
+	<div class="card">
+		<h2>Local counter: {{localCounterServise.counter}}</h2>
+		<button class="btn" (click)="localCounterServise.increase()">+</button>
+		<button class="btn" (click)="localCounterServise.decrease()">-</button>
+	</div>
 </div>
