--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,6 @@
 		<button class="btn" (click)="localCounterServise.increase()">+</button>
 		<button class="btn" (click)="localCounterServise.decrease()">-</button>
 	</div>
+	<hr>
+	<app-counter></app-counter>
 </div>
