--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,3 @@
 <div class="container">
-	<h1>Angular Services</h1>
-	<div class="card">
-		<h2>App counter: {{appCounterServise.counter}}</h2>
-		<button class="btn" (click)="appCounterServise.increase()">+</button>
-		<button class="btn" (click)="appCounterServise.decrease()">-</button>
-	</div>
-
-	<div class="card">
-		<h2>Local counter: {{localCounterServise.counter}}</h2>
-		<button class="btn" (click)="localCounterServise.increase()">+</button>
-		<button class="btn" (click)="localCounterServise.decrease()">-</button>
-	</div>
-	<hr>
-	<app-counter></app-counter>
+	<h1>Angular Forms</h1>
 </div>
