--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
 
     <div class="form-control">
       <label>Email</label>
-      <input type="text" placeholder="Email">
+      <input type="text" placeholder="Email" formControlName='email'>
       <div class="validation"></div>
     </div>
 
     <div class="form-control">
       <label>password</label>
-      <input type="password" placeholder="Пароль">
+      <input type="password" placeholder="Пароль" formControlName='password'>
       <div class="validation"></div>
     </div>
 
