--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <button class="btn" type="submit">Send</button>
+    <button class="btn" type="submit" [disabled]="form.invalid">Send</button>
 
   </form>
 </div>
