--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,59 @@
 <div class="container">
-  <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-    <h1>Angular Forms</h1>
+	<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+		<h1>Angular Forms</h1>
 
-    <div class="form-control">
-      <label>Email</label>
-      <input type="text" placeholder="Email" formControlName='email'>
-      <div class="validation"></div>
-    </div>
+		<div class="form-control">
+			<label>Email</label>
+			<input type="text" placeholder="Email" formControlName='email'>
+			<div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="validation">
+				<small *ngIf="form.get('email')?.errors?.['required']"> Email field cannot be empty </small>
 
-    <div class="form-control">
-      <label>password</label>
-      <input type="password" placeholder="Пароль" formControlName='password'>
-      <div class="validation"></div>
-    </div>
+				<small *ngIf="form.get('email')?.errors?.['email']">Enter a valid email</small>
+			</div>
+		</div>
 
-    <div class="card">
-      <h2>Adress</h2>
+		<div class=" form-control">
+			<label>password</label>
+			<input type="password" placeholder="Пароль" formControlName='password'>
+			<div *ngIf="form.get('password')?.invalid && form.get('password')?.touched" class="validation">
+				<small *ngIf="form.get('password')?.errors?.['required']">Password field cannot be empty </small>
+				<small *ngIf="form.get('password')?.errors?.['minlength']">
+					The length should be at least {{form.get('password')?.errors?.['minlength'].requiredLength}} characters. 
+					The number of characters - {{form.get('password')?.errors?.['minlength'].actualLength}}
+				</small>
+			</div>
+		</div>
 
-      <div class="form-control">
-        <label>Country</label>
+		<div class="card">
+			<h2>Adress</h2>
 
-        <select>
-          <option value="uk">United Kingdom</option>
-          <option value="ua">Ukraine</option>
-          <option value="us">United States</option>
-        </select>
-      </div>
+			<div class="form-control">
+				<label>Country</label>
 
-      <div class="form-control">
-        <input type="text">
-      </div>
+				<select>
+					<option value="uk">United Kingdom</option>
+					<option value="ua">Ukraine</option>
+					<option value="us">United States</option>
+				</select>
+			</div>
 
-      <button class="btn" type="button">Choose capital</button>
-    </div>
+			<div class="form-control">
+				<input type="text">
+			</div>
 
-    <div class="card">
-      <h2>Your skills</h2>
-      <button class="btn" type="button">Add skill</button>
-      <div class="form-control">
-        <label></label>
-        <input type="text">
-      </div>
-    </div>
+			<button class="btn" type="button">Choose capital</button>
+		</div>
 
-    <button class="btn" type="submit" [disabled]="form.invalid">Send</button>
+		<div class="card">
+			<h2>Your skills</h2>
+			<button class="btn" type="button">Add skill</button>
+			<div class="form-control">
+				<label></label>
+				<input type="text">
+			</div>
+		</div>
 
-  </form>
+		<button class="btn" type="submit" [disabled]="form.invalid">Send</button>
+
+	</form>
 </div>
