--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,13 +24,13 @@
 			</div>
 		</div>
 
-		<div class="card">
+		<div class="card" formGroupName="address">
 			<h2>Adress</h2>
 
 			<div class="form-control">
 				<label>Country</label>
 
-				<select>
+				<select formControlName="country">
 					<option value="uk">United Kingdom</option>
 					<option value="ua">Ukraine</option>
 					<option value="us">United States</option>
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="form-control">
-				<input type="text">
+				<input type="text" formControlName="city">
 			</div>
 
 			<button class="btn" type="button">Choose capital</button>
