--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
 				<input type="text" formControlName="city">
 			</div>
 
-			<button class="btn" type="button">Choose capital</button>
+			<button class="btn" type="button" (click)="setCapital()">Choose capital</button>
 		</div>
 
 		<div class="card">
