--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,6 @@
 <div class="container">
-	<form class="card" [formGroup]="form" (ngSubmit)="submit()">
-		<h1>Angular Forms</h1>
-
-		<div class="form-control">
-			<label>Email</label>
-			<input type="text" placeholder="Email" formControlName='email'>
-			<div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="validation">
-				<small *ngIf="form.get('email')?.errors?.['required']"> Email field cannot be empty </small>
-
-				<small *ngIf="form.get('email')?.errors?.['email']">Enter a valid email</small>
-				<small *ngIf="form.get('email')?.errors?.['restrictedEmails']">Email {{form.get('email').value}}restricted</small>
-				<small *ngIf="form.get('email')?.errors?.['uniqEmail']">Email {{form.get('email').value}}is already used</small>
-			</div>
-		</div>
-
-		<div class=" form-control">
-			<label>password</label>
-			<input type="password" placeholder="Пароль" formControlName='password'>
-			<div *ngIf="form.get('password')?.invalid && form.get('password')?.touched" class="validation">
-				<small *ngIf="form.get('password')?.errors?.['required']">Password field cannot be empty </small>
-				<small *ngIf="form.get('password')?.errors?.['minlength']">
-					The length should be at least {{form.get('password')?.errors?.['minlength'].requiredLength}} characters.
-					The number of characters - {{form.get('password')?.errors?.['minlength'].actualLength}}
-				</small>
-			</div>
-		</div>
-
-		<div class="card" formGroupName="address">
-			<h2>Adress</h2>
-
-			<div class="form-control">
-				<label>Country</label>
-
-				<select formControlName="country">
-					<option value="uk">United Kingdom</option>
-					<option value="ua">Ukraine</option>
-					<option value="us">United States</option>
-				</select>
-			</div>
-
-			<div class="form-control">
-				<input type="text" formControlName="city">
-			</div>
-
-			<button class="btn" type="button" (click)="setCapital()">Choose capital</button>
-		</div>
-
-		<div class="card" formGroupName="skills">
-			<h2>Your skills</h2>
-			<button class="btn" type="button" (click)="addSkill()">Add skill</button>
-			<div class="form-control" *ngFor="let control of form.get('skills').controls; let idx = index">
-				<label>Skill {{idx +1}}</label>
-				<input type="text" [formControlName]="idx">
-			</div>
-		</div>
-
-		<button class="btn" type="submit" [disabled]="form.invalid || form.pending">Send</button>
-
-	</form>
+	<h1>Angular NgModels</h1>
+	<app-switch [(ngModel)]="appState" (ngModelChange)="handleChange()"></app-switch>
+	<hr>
+	<p>{{appState}}</p>
 </div>
