--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,23 @@
 <div class="container">
-	<h1>RxJS Intro</h1>
-	<button class="btn" (click)="stop()">Stop interval</button>
-	<button class="btn btn-danger" (click)="next()">Next value</button>
+  <h1>Angular HttpClient</h1>
+
+  <div class="card">
+    <div class="form-control">
+      <input type="text" placeholder="Название">
+    </div>
+    <button class="btn">Добавить</button>
+    <button class="btn">Загрузить</button>
+  </div>
+
+  <hr>
+
+  <div class="card">
+    <p>
+      <span class="completed">Название</span>
+      <span>
+        <button class="btn btn-danger">Удалить</button>
+        <button class="btn">Завершить</button>
+      </span>
+    </p>
+  </div>
 </div>
