--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,23 @@
 <div class="container">
-  <h1>Angular HttpClient</h1>
+	<h1>Angular HttpClient</h1>
 
-  <div class="card">
-    <div class="form-control">
-      <input type="text" placeholder="Название">
-    </div>
-    <button class="btn">Add</button>
-    <button class="btn">Download</button>
-  </div>
+	<div class="card">
+		<div class="form-control">
+			<input type="text" placeholder="Name" [(ngModel)]="todoTitle">
+		</div>
+		<button class="btn" (click)="addTodo()">Add</button>
+		<button class="btn">Download</button>
+	</div>
 
-  <hr>
+	<hr>
 
-  <div class="card" *ngFor="let todo of todos">
-    <p>
-      <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
-      <span>
-        <button class="btn btn-danger">Delete</button>
-        <button class="btn" [disabled]="todo.completed">Finish</button>
-      </span>
-    </p>
-  </div>
+	<div class="card" *ngFor="let todo of todos">
+		<p>
+			<span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
+			<span>
+				<button class="btn btn-danger">Delete</button>
+				<button class="btn" [disabled]="todo.completed">Finish</button>
+			</span>
+		</p>
+	</div>
 </div>
