--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,20 @@
+<nav class="navbar">
+  <h1>
+    <a href="#">Angular Routing</a>
+  </h1>
+  <ul>
+    <li class="active">
+      <a href="#">Home</a>
+    </li>
+    <li><a href="#">Posts</a></li>
+    <li><a href="#">About</a></li>
+    <li><button class="btn">Login</button></li>
+    <li><button class="btn">Logout</button></li>
+  </ul>
+</nav>
+
 <div class="container">
-	<h1>Angular HttpClient</h1>
-
-	<div class="card">
-		<div class="form-control">
-			<input type="text" placeholder="Name" [(ngModel)]="todoTitle">
-		</div>
-		<button class="btn" (click)="addTodo()">Add</button>
-		<button class="btn" (click)="fetchTodos()">Download</button>
-	</div>
-
-	<hr>
-
-	<p *ngIf="error; else todosBlock" class="error">{{error}}</p>
-
-	<ng-template #todosBlock>
-		<div *ngIf="!loading; else loadingBlock">
-			<div *ngIf="todos.length; else noTodos">
-				<div class="card" *ngFor="let todo of todos">
-					<p>
-						<span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
-						<span>
-							<button class="btn btn-danger" (click)="removeTodo(todo.id!)">Delete</button>
-							<button class="btn" [disabled]="todo.completed" (click)="completeTodo(todo.id!)">Finish</button>
-						</span>
-					</p>
-				</div>
-			</div>
-			<ng-template #noTodos>
-				<p>No Elements</p>
-			</ng-template>
-		</div>
-		<ng-template #loadingBlock>
-			<p>
-				Loading...
-			</p>
-		</ng-template>
-	</ng-template>
+  <div class="card">
+    <app-home></app-home>
+  </div>
 </div>
