--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
+<button (click)="animate()">Animate</button>
+
+<hr>
+
 <div class="wrap">
-	<div class="box"></div>
+
+	<div 
+	class="box"
+	[@box]="boxState"
+	></div>
 </div>
 
 
