--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <button (click)="animate()">Animate</button>
+<button (click)="boxState = 'special'">Set special state</button>
 
 <hr>
 
@@ -8,7 +9,7 @@
 	class="box"
 	[@box]="boxState"
 	>
-	{{boxState | uppercase}}
+	<h4>{{boxState | uppercase}}</h4>
 </div>
 </div>
 
