enter and leave animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <button (click)="animate()">Animate</button>
 <button (click)="boxState = 'special'">Set special state</button>
+<button (click)="visible = !visible">Toggle visible</button>
 
 <hr>
 
@@ -7,6 +8,7 @@
 
 	<div 
 	class="box"
+	*ngIf="visible"
 	[@box]="boxState"
 	>
 	<h4>{{boxState | uppercase}}</h4>
