--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
 	class="box"
 	*ngIf="visible"
 	[@box]="boxState"
+	(@box.start)="animationStarted($event)"
+	(@box.done)="animationDone($event)"
 	>
 	<h4>{{boxState | uppercase}}</h4>
 </div>
