--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,9 @@
 
 <div class="wrap">
 
-	<div 
-	class="box"
-	*ngIf="visible"
-	[@box]="boxState"
-	(@box.start)="animationStarted($event)"
-	(@box.done)="animationDone($event)"
-	>
-	<h4>{{boxState | uppercase}}</h4>
+	<app-animate></app-animate>
 </div>
-</div>
+
+
 
 
